; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_sdgecko_io.c_sdgecko_initIODefault.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_sdgecko_io.c_sdgecko_initIODefault.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_DRIVE = common dso_local global i64 0, align 8
@_ioRetryCnt = common dso_local global i64 0, align 8
@_ioError = common dso_local global i64* null, align 8
@FALSE = common dso_local global i32 0, align 4
@_ioCardInserted = common dso_local global i32* null, align 8
@NOT_INITIALIZED = common dso_local global i32 0, align 4
@_ioFlag = common dso_local global i32* null, align 8
@BYTE_ADDRESSING = common dso_local global i32 0, align 4
@_ioAddressingType = common dso_local global i32* null, align 8
@TYPE_SD = common dso_local global i32 0, align 4
@_initType = common dso_local global i32* null, align 8
@_ioEXILock = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sdgecko_initIODefault() #0 {
  %1 = alloca i64, align 8
  %2 = call i32 (...) @__init_crc7()
  %3 = call i32 (...) @__init_crc16()
  store i64 0, i64* %1, align 8
  br label %4

4:                                                ; preds = %32, %0
  %5 = load i64, i64* %1, align 8
  %6 = load i64, i64* @MAX_DRIVE, align 8
  %7 = icmp ult i64 %5, %6
  br i1 %7, label %8, label %35

8:                                                ; preds = %4
  store i64 0, i64* @_ioRetryCnt, align 8
  %9 = load i64*, i64** @_ioError, align 8
  %10 = load i64, i64* %1, align 8
  %11 = getelementptr inbounds i64, i64* %9, i64 %10
  store i64 0, i64* %11, align 8
  %12 = load i32, i32* @FALSE, align 4
  %13 = load i32*, i32** @_ioCardInserted, align 8
  %14 = load i64, i64* %1, align 8
  %15 = getelementptr inbounds i32, i32* %13, i64 %14
  store i32 %12, i32* %15, align 4
  %16 = load i32, i32* @NOT_INITIALIZED, align 4
  %17 = load i32*, i32** @_ioFlag, align 8
  %18 = load i64, i64* %1, align 8
  %19 = getelementptr inbounds i32, i32* %17, i64 %18
  store i32 %16, i32* %19, align 4
  %20 = load i32, i32* @BYTE_ADDRESSING, align 4
  %21 = load i32*, i32** @_ioAddressingType, align 8
  %22 = load i64, i64* %1, align 8
  %23 = getelementptr inbounds i32, i32* %21, i64 %22
  store i32 %20, i32* %23, align 4
  %24 = load i32, i32* @TYPE_SD, align 4
  %25 = load i32*, i32** @_initType, align 8
  %26 = load i64, i64* %1, align 8
  %27 = getelementptr inbounds i32, i32* %25, i64 %26
  store i32 %24, i32* %27, align 4
  %28 = load i32*, i32** @_ioEXILock, align 8
  %29 = load i64, i64* %1, align 8
  %30 = getelementptr inbounds i32, i32* %28, i64 %29
  %31 = call i32 @LWP_InitQueue(i32* %30)
  br label %32

32:                                               ; preds = %8
  %33 = load i64, i64* %1, align 8
  %34 = add i64 %33, 1
  store i64 %34, i64* %1, align 8
  br label %4

35:                                               ; preds = %4
  ret void
}

declare dso_local i32 @__init_crc7(...) #1

declare dso_local i32 @__init_crc16(...) #1

declare dso_local i32 @LWP_InitQueue(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
